--- a/Language/Functions/Advanced IO/shiftIn.adoc
+++ b/Language/Functions/Advanced IO/shiftIn.adoc
@@ -3,45 +3,41 @@ title: shiftIn()
 categories: [ "Functions" ]
 subCategories: [ "Advanced I/O" ]
 ---
+// ARDUINO LANGUAGE REFERENCE TAG (above)   ►►►►► ALWAYS INCLUDE IN YOUR FILE ◄◄◄◄◄
 
-
-
-
-
+// PAGE TITLE
 = shiftIn()
-
 
 // OVERVIEW SECTION STARTS
 [#overview]
 --
 
 [float]
-=== Description
-Shifts in a byte of data one bit at a time. Starts from either the most (i.e. the leftmost) or least (rightmost) significant bit. For each bit, the clock pin is pulled high, the next bit is read from the data line, and then the clock pin is taken low.
+=== Descripción
+Cambia en un byte de datos, un bit por vez. Comienza desde el bit más significativo (es decir, el más a la izquierda) o menos significativo (el más a la derecha). Para cada bit, el pin del reloj pasa a nivel `HIGH`, el siguiente bit se lee de la línea de datos, y luego el pin del reloj pasa a nivel `LOW`.
 
-If you're interfacing with a device that's clocked by rising edges, you'll need to make sure that the clock pin is low before the first call to `shiftIn()`, e.g. with a call to `digitalWrite(clockPin, LOW)`.
+Si está interactuando con un dispositivo que está marcado por bordes de subida, deberá asegurarse de que el pin del reloj esté bajo antes de la primera llamada a `shiftIn()`, con una llamada a `digitalWrite(clockPin, LOW)`.
 
-Note: this is a software implementation; Arduino also provides an link:https://www.arduino.cc/en/Reference/SPI[SPI library] that uses the hardware implementation, which is faster but only works on specific pins.
-[%hardbreaks]
+Nota: esta es una implementación de software; Arduino también proporciona una link:https://www.arduino.cc/en/Reference/SPI[librería SPI] que usa la implementación de hardware, que es más rápida pero solo funciona en pines específicos.
 
 
 [float]
-=== Syntax
+=== Sintaxis
 `byte incoming = shiftIn(dataPin, clockPin, bitOrder)`
 
 
 [float]
-=== Parameters
-`dataPin`: the pin on which to input each bit (int)
+=== Parámetros
+`dataPin`: Pin en el que se ingresa cada bit - `(int)`
 
-`clockPin`: the pin to toggle to signal a read from *dataPin*
+`clockPin`: Pin que cambia cuando se hace una lectura con `dataPin`
 
-`bitOrder`: which order to shift in the bits; either *MSBFIRST* or *LSBFIRST*.
-(Most Significant Bit First, or, Least Significant Bit First)
+`bitOrder`: Orden en que se desplazan los bits de entrada; ya sea `MSBFIRST` o `LSBFIRST`. (Most Significant Bit First, Least Significant Bit First)
+
 
 [float]
-=== Returns
-the value read (byte)
+=== Retorno
+el valor leído `(byte)`.
 
 --
 // OVERVIEW SECTION ENDS
